Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef struct
{
	char Indice[4];
	double Aliquota;
	BOOL Tipo;
	double Total;
	BOOL Sequencia;
} AliquotaRec;


typedef struct
{
	char Numero[14];
	int COO_Cupom;
	int COO_Dav;
	char Titulo[31];
	double Valor;
	double DtEmissao;
} DAVsRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;



typedef struct
{
	char Indice[4];
	char Descricao[30];
	int Contador;
} RelatorioGerencialRec;

DllImport int ECF_AbreCupomVinculado(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const double valor);

DllImport int ECF_AbreCupomVinculadoCNF(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const PCHAR codComprovanteNaoFiscal, const double valor);

DllImport int ECF_AbreNaoFiscal(const INTPTR ecfHandle, const PCHAR cpfCnpj);

DllImport int ECF_AbreRelatorioGerencial(const INTPTR ecfHandle, const int indice);

DllImport int ECF_CancelaCupom(const INTPTR ecfHandle);

DllImport int ECF_CancelaDescontoAcrescimoItem(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaDescontoAcrescimoSubTotal(const INTPTR ecfHandle, const char tipoAcrescimoDesconto);

DllImport int ECF_CancelaItemVendido(const INTPTR ecfHandle, const int numItem);

DllImport int ECF_CancelaItemVendidoParcial(const INTPTR ecfHandle, const int numItem, const double quantidade);

DllImport int ECF_CancelaNaoFiscal(const INTPTR ecfHandle);

DllImport int ECF_CarregaAliquotas(const INTPTR ecfHandle);

DllImport int ECF_CarregaFormasPagamento(const INTPTR ecfHandle);

DllImport int ECF_CarregaRelatoriosGerenciais(const INTPTR ecfHandle);

DllImport int ECF_CortaPapel(const INTPTR ecfHandle, const BOOL corteParcial);

DllImport int ECF_DAV_Abrir(const INTPTR ecfHandle, const double emissao, const PCHAR decrdocumento, const PCHAR numero, const PCHAR situacao, const PCHAR vendedor, const PCHAR observacao, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_DAV_Fechar(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_DAV_RegistrarItem(const INTPTR ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR unidade, const double quantidade, const double vlrunitario, const double desconto, const double acrescimo, const BOOL cancelado);

DllImport int ECF_DescontoAcrescimoItemAnterior(const INTPTR ecfHandle, const double valorDescontoAcrescimo, const PCHAR descontoAcrescimo);

DllImport int ECF_EfetuaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_EfetuaPagamentoNaoFiscal(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_EstornaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagtoEstornar, const PCHAR codFormaPagtoEfetivar, const double valor, const PCHAR observacao);

DllImport int ECF_FechaCupom(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_FechaNaoFiscal(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_FechaRelatorio(const INTPTR ecfHandle);

DllImport int ECF_GetAliquota(const INTPTR ecfHandle, AliquotaRec* aliquota, const int index);

DllImport int ECF_GetFormaPagamento(const INTPTR ecfHandle, FormaPagamentoRec* formaPagamento, const int index);

DllImport int ECF_GetRelatoriosGerenciais(const INTPTR ecfHandle, RelatorioGerencialRec* relatorio, const int index);

DllImport int ECF_IdentificaPAF(const INTPTR ecfHandle, const PCHAR nomeVersao, const PCHAR md5);

DllImport int ECF_LegendaInmetroProximoItem(const INTPTR ecfHandle);

DllImport int ECF_LeituraX(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisAliquota(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisFormaPagamento(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisRelatoriosGerenciais(const INTPTR ecfHandle);

DllImport int ECF_LinhaCupomVinculado(const INTPTR ecfHandle, const PCHAR linha);

DllImport int ECF_LinhaRelatorioGerencial(const INTPTR ecfHandle, const PCHAR linha, const int indiceBMP);

DllImport int ECF_PafMF_GerarCAT52(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Cotepe1704(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Cotepe1704_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Espelho(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Espelho_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Impressao(const INTPTR ecfHandle, const double DataInicial, const double DataFinal);

DllImport int ECF_PafMF_LMFC_Impressao_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal);

DllImport int ECF_PafMF_LMFS_Espelho(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFS_Espelho_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFS_Impressao(const INTPTR ecfHandle, const double DataInicial, const double DataFinal);

DllImport int ECF_PafMF_LMFS_Impressao_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal);

DllImport int ECF_PafMF_LX_Impressao(const INTPTR ecfHandle);

DllImport int ECF_PafMF_MFD_Cotepe1704(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_MFD_Cotepe1704_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_MFD_Espelho(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_MFD_Espelho_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_RelDAVEmitidos(const INTPTR ecfHandle, const DAVsRec DAVs[], const int index, const PCHAR TituloRelatorio, const PCHAR IndiceRelatorio);

DllImport int ECF_PafMF_RelIdentificacaoPafECF(const INTPTR ecfHandle, const INTPTR aacHandle, const int IndiceRelatorio);

DllImport int ECF_PafMF_RelMeiosPagamento(const INTPTR ecfHandle, const FormaPagamentoRec formasPagamento[], const int count, const PCHAR TituloRelatorio, const int IndiceRelatorio);

DllImport int ECF_ProgramaAliquota(const INTPTR ecfHandle, const double aliquota, const char tipo, const PCHAR posicao);

DllImport int ECF_ProgramaFormaPagamento(const INTPTR ecfHandle, const PCHAR descricao, const BOOL permiteVinculado, const PCHAR posicao);

DllImport int ECF_ProgramaRelatoriosGerenciais(const INTPTR ecfHandle, const PCHAR descricao, const PCHAR posicao);

DllImport int ECF_PulaLinhas(const INTPTR ecfHandle, const int numLinhas);

DllImport int ECF_ReducaoZ(const INTPTR ecfHandle);

DllImport int ECF_RegistraItemNaoFiscal(const INTPTR ecfHandle, const PCHAR codCNF, const double value, const PCHAR obs);

DllImport int ECF_SubtotalizaCupom(const INTPTR ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);

DllImport int ECF_SubtotalizaNaoFiscal(const INTPTR ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);

DllImport int ECF_VendeItem(const INTPTR ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR aliquotaICMS, const double qtd, const double valorUnitario, const double descontoPorc, const PCHAR unidade, const PCHAR tipoDescontoAcrescimo, const PCHAR descontoAcrescimo);